--- a/front_react/src/CSS/App.css
+++ b/front_react/src/CSS/App.css
@@ -1,6 +1,6 @@
-/* .App {
-  text-align: center;
-} */
+.App {
+  display: flex;
+}
 
 .Navigation {
   position: fixed;
@@ -27,4 +27,13 @@
   justify-content: space-between;
   align-items: center;
   margin-right: 20px;
+}
+
+.list {
+  padding-top: 50px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  /* width: 100%; */
 }
