--- a/front_react/src/CSS/App.css
+++ b/front_react/src/CSS/App.css
@@ -1,39 +1,9 @@
 .App {
-  display: flex;
+  text-align: center;
 }
 
-.Navigation {
-  position: fixed;
+.mainContent {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   align-items: center;
-  /* padding: 0 20px; */
-  background-color: #282c34;
-  color: white;
-  height: 50px;
-  width: 100%;
-}
-
-.logo {
-  font-size: 1.5em;
-  margin-left: 20px;
-}
-
-.menu {
-  width: 15%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  margin-right: 20px;
-}
-
-.list {
-  padding-top: 50px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  /* width: 100%; */
 }
