--- a/src/CSS/ItemList.css
+++ b/src/CSS/ItemList.css
@@ -1,5 +1,5 @@
 .item {
-    padding: 10px;
+    padding: 0px 0 10px 0;
     margin: 5px;
     display: flex;
     flex-direction: column;
@@ -8,11 +8,17 @@
     border-radius: 5%;
 } 
 
+.itemimg{
+    border-top-right-radius: 5%;
+    border-top-left-radius: 5%;
+}
+
 .list {
     padding-top: 20px;
+    padding-bottom: 20px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-  }
+}
   
