--- a/src/CSS/ItemList.css
+++ b/src/CSS/ItemList.css
@@ -1,24 +1,20 @@
 .item {
-    padding: 0px 0 10px 0;
-    margin: 5px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 1px solid #74777c;
-    border-radius: 5%;
-} 
+  padding: 0px 0 10px 0;
+  margin: 5px;
+  border: 1px solid #74777c;
+  border-radius: 10px;
+}
 
-.itemimg{
-    border-top-right-radius: 5%;
-    border-top-left-radius: 5%;
+.itemimg {
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
 }
 
 .list {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
-  
