--- a/src/CSS/ItemList.css
+++ b/src/CSS/ItemList.css
@@ -6,8 +6,10 @@
 }
 
 .itemimg {
-  height: 250px;
+  max-height: 250px;
+  max-width: 300px;
   width: auto;
+  height: auto;
   border-top-right-radius: 10px;
   border-top-left-radius: 10px;
 }
