--- a/src/CSS/DonationList.css
+++ b/src/CSS/DonationList.css
@@ -1,9 +1,18 @@
 .donation {
   display: flex;
   height: 150px;
-  justify-content: center;
-  align-items: center;
   margin: 2% 5% 0 5%;
   border-radius: 10px;
   border: 1px solid #000000;
+}
+
+.donateImg {
+  max-height: 100%;
+  width: 50%;
+  height: auto;
+}
+
+.donationImg {
+  /* min-height: 200px;
+  width: auto; */
 }
